fixing folder tab overlaps for all portrait widths

--- a/wordpress/wp-content/themes/missionphoenix/scss/_config.scss
+++ b/wordpress/wp-content/themes/missionphoenix/scss/_config.scss
@@ -15,7 +15,7 @@ $pastel-blue:#ace7ff;
 
 /* Layout dimensions */
 $portrait-folder-vh: 95.5vh;
-$portrait-folder-vw: 83vw;
+$portrait-folder-vw: 85vw;
 $landscape-folder-vw: 97vw;
 $landscape-folder-vh: 89vh;
 
